calendar first finish!

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
       <h1>Hello, Gulp!</h1>
       <p>You now have</p>
       <ul>
+      	<li><a href="calendar.html">Calendar</a></li>
         <li>HTML5 Boilerplate</li>
         <li>Modernizr</li>
         <li>jQuery</li>
